--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+*.iml
+.idea/
+target/
+
+**/terraform.tfstate*
+**/.terraform*
